Fix text alignment and make all buttons clickable

--- a/style.css
+++ b/style.css
@@ -155,14 +155,13 @@ body {
   border-radius: 30px;
   font-weight: 800;
   padding: 5px;
-
+  text-align: center;
 }
 
 .dino-emote {
   margin: 10px 5px;
   padding: 5px 0;
   font-weight: 800;
-  
 }
 
 .dino-skills {
